2006-10-02  Al Riddoch  <alriddoch@zepler.org>

	* PythonCallback.cpp, PythonCallback_impl.h, PythonCallback.h:
	  Implement wrap() for references, and rename the pointer wrapper
	  template to wrapPtr().

	* setup.py: Add necessary handling for library directories for eris.

2006-10-02  Al Riddoch  <alriddoch@zepler.org>

	* PythonCallback_impl.h, PythonCallback.cpp, PythonCallback.h:
	  Add templates for handling callback arguments.

	* eris_account.cpp: Implement createCharacter, and add more callbacks
	  with argument support this time.

2006-10-01  Al Riddoch  <alriddoch@zepler.org>

	* eris_account.cpp: Start wrapping a bunch more methods.

2006-10-01  Al Riddoch  <alriddoch@zepler.org>

	* PythonCallback.cpp, PythonCallback.h: New class to call python
	  functions in response to sigc++ signals.

	* eris_account.cpp, eris_connection.cpp: Implement the various
	  callbacks required to track logging in.

	* test.py: New script to test the bindings.

2006-10-01  Al Riddoch  <alriddoch@zepler.org>

	* eris_connection.cpp: Implement argument parsing for the constructor
	  and start work on using setattr to install callbacks.

	* eris_account.cpp: Implement arg parsing for all methods.

	* eris.cpp, eris_polldefault.cpp, eris_polldefault.h: Add a new
	  submodule for PollDefault, essential for working the connections
	  usefully.

	* Makefile: A minor convenience makefile, to get around the clumsy
	  syntax of invoking setup.py.

2006-09-29  Al Riddoch  <alriddoch@zepler.org>

	* eris_account.h, eris_account.cpp: Start work on bindings for
	  Eris::Account.

	* eris_connection.cpp: Add methods to connection as required.

2006-09-29  Al Riddoch  <alriddoch@zepler.org>

	* New package to wrap various WorldForge libraries for Python